se agrega funcionalidad para restaurar password mediante email

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:postgresql://${DATASOURCE_PROD_DONATELLO_RENDER}
 spring.datasource.username=${USER_PROD_DONATELLO_RENDER}
 spring.datasource.password=${PASSWORD_PROD_DONATELLO_RENDER}
 
+# USER_PROD_DONATELLO_RENDER donatello_prod_bd_user
+# PASSWORD_PROD_DONATELLO_RENDER NBWyWzatDdAm98HwaGF6CFP1rGN6gbm8
+# DATASOURCE_PROD_DONATELLO_RENDER   #hostname: dpg-cqt99vdds78s738elng0-a #nombre db: donatello_bd
+
+spring.url.frontend=http://localhost:3000
