--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,13 @@ springdoc.swagger-ui.enabled = true
 springdoc.swagger-ui.path = /docs/swagger-ui.html
 springdoc.packagesToScan = com.igrowker.donatello
 springdoc.pathsToMatch = /api/**
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=donatellosaas@gmail.com
+spring.mail.password=oazvtwtuxxvqsdmb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.timeout=10000
