--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
@@ -114,6 +115,12 @@
 			<version>2.3.0</version>
 		</dependency>
 		<!-- para swagger -->
+		<!-- envio emails  -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<!-- envio emails  -->
 	</dependencies>
 
 	<build>
