--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,5 @@
 spring.datasource.url=jdbc:postgresql://${DATASOURCE_URL_POSTGRES_DONATELLO}
 spring.datasource.username=${USERNAME_POSTGRES}
 spring.datasource.password=${PASSWORD_POSTGRES}
+
+spring.url.frontend=http://localhost:3000
